--- a/game3/g3.html
+++ b/game3/g3.html
@@ -57,7 +57,7 @@ function create ()
     stage = 0;
     correct = [0,1,2,3,2,3,1,0,2,3,1];
     this.add.image(400, 300, 'bluebg');
-    scoreText = this.add.text(320, 16, 'Score: 0', { fontSize: '32px', fill: '#000000' });
+    scoreText = this.add.text(320, 16, 'Score: 0', { fontSize: '32px', color: '#000000', fontFamily: 'Arial'});
     word = this.add.image(400,100,'up');
     player = this.physics.add.sprite(400,300,'dude');
 
