edited the main text

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     </title>
 </head>
 <body>
-        <a href="https://psychgame.github.io/games/game1/g1.html" target="myiframe">Game 1</a> ||  
-        <a href="https://psychgame.github.io/games/game2/g2normal.html" target="myiframe">Game 2(Normal)</a> ||  
-        <a href="https://psychgame.github.io/games/game2/g2.html" target="myiframe">Game 2 - Hard</a> ||  
-        <a href="https://psychgame.github.io/games/game3/g3.html" target="myiframe">Game 3</a> <br>
+        <a href="https://psychgame.github.io/games/game1/g1.html" target="myiframe">Neglect</a> ||  
+        <a href="https://psychgame.github.io/games/game2/g2normal.html" target="myiframe">Normal Motor skills</a> ||  
+        <a href="https://psychgame.github.io/games/game2/g2.html" target="myiframe">Impaired Motor skills</a> ||  
+        <a href="https://psychgame.github.io/games/game3/g3.html" target="myiframe">Aphasia</a> <br>
         
     <center>
+	Created by Ruby De Jesus. <br />Use error keys to navigate: <br />
         <iframe src="https://psychgame.github.io/games/game1/g1.html" height=600 width=800 name="myiframe" frameborder="0"></iframe>
         
     </center>
