edited the main text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://psychgame.github.io/games/game3/g3.html" target="myiframe">Aphasia</a> <br>
         
     <center>
-	Created by Ruby De Jesus. <br />Use error keys to navigate: <br />
+	Created by Ruby De Jesus. <br />Use arrow keys to navigate: <br />
         <iframe src="https://psychgame.github.io/games/game1/g1.html" height=600 width=800 name="myiframe" frameborder="0"></iframe>
         
     </center>
